# gitlab-emulator

./: .gitignore  .gitlab-ci.yml  README.md  dump_cfg.py  example-runner-proxy.yml  example-runner.yml  install-venv.sh  locallab.py  publish.sh  setup.py  test-ci.yml  test_configloader.py  test_requirements.txt  wait-for-dockerd.sh
designer/: glpd.py  (+1 more)
emulator/: .coveragerc  .coveragerc.apple  .coveragerc.windows  coverage.sh  publish.sh  pytest.ini  remote-included.yml  setup.cfg  setup.py
emulator/bambemu/: loader.py  yamltypes.py
emulator/bambemu/tests/: conftest.py  test_simple_loader.py
emulator/bamboo-specs/: bamboo.yml  example-basic-plan.yml
emulator/configs/: example-emulator.yml
emulator/gitlabemu/: ansi.py  artifacts.py  configloader.py  configtool.py  docker.py  generator.py  gitlab_client_api.py  helpers.py  jobs.py  localfiles.py  logmsg.py  pipelines.py  pstab.py  resnamer.py  runner.py  types.py  userconfig.py  userconfigdata.py  yamlloader.py
emulator/gitlabemu/cirunner/: __main__.py  junitxml.py  runner.py
emulator/gitlabemu/configtypes/: job.py
emulator/gitlabemu/genericci/: types.py
emulator/gitlabemu/gitlab/: client.py  types.py
emulator/protocol-captures/: runner-request-job.txt  runner-trace-job.txt
emulator/tests/: basic.yml  conftest.py  included-simple.yml  needs.yml  test-extends.yaml  test-needs.yaml  test-services.yaml  test-timeout.yaml  test_check_needs.py  test_configloader.py  test_configloader_loader.py  test_interactive_modes.py  test_local_docker.py  test_string_encoding.py  test_timeouts.py  test_userconfig.py
(+186 files in other folders)
