[metadata]
name = gitlab-emulator
version = 16.1.999
description = Run/Inspect a .gitlab-ci.yml jobs and pipelines locally
author = Ian Norton
author_email = inorton@gmail.com
license = License :: OSI Approved :: MIT License
long_description = Run a subset of .gitlab-ci.yml jobs locally using docker

[options]
platforms =
    any
packages =
    gitlabemu
    gitlabemu.gitlab
    gitlabemu.rules
    gitlabemu.genericci
    gitlabemu.glp

python_requires = >= 3.6
install_requires =
    pyyaml>=5.1
    requests>=2.25.0
    requests-toolbelt>=0.9.1
    python-gitlab>=3.2.0; python_version>='3.7'
    python-gitlab==2.10.1; python_version<='3.6'
    certifi>=2022.6
    antlr4-python3-runtime==4.11.1
    prompt-toolkit>=3.0
    taskstats==0.0.3; python_version>='3.7'

[options.entry_points]
console_scripts =
    gle = gitlabemu.runner:run
    gle-config = gitlabemu.configtool:main
    glp = gitlabemu.glp.tool:run
    gitlab-py-runner = gitlabemu.cirunner.runner:run
